--- a/3-1/9-GBL.html
+++ b/3-1/9-GBL.html
@@ -17,6 +17,7 @@
     <ul>
         <li>Sonnet 75 starting with the line “One day I wrote her name upon the strand” was written by <u>Edmund Spenser</u>.</li>
         <li><i>Shakespeare's Sonnets</i> is the title of a collection of <u>154</u> sonnets by William Shakespeare.</li>
+        <li><u>Sonnet</u> (literary form) is popular in Elizabethan age.</li>
         <li><u>Sir Philip Sidney</u> is an Elizabethan poet who stood for the Renaissance ideal of “the complete man.”</li>
         <li>The basic unit of poetic meter in English is a <u>foot</u> which normally consists of one stressed syllable plus one or two unstressed syllables. </li>
         <li>A four-line stanza is called a <u>quatrain</u>. </li>
@@ -27,10 +28,10 @@
         <li>The most important literary work of the Old-English period is <u><i>Beowulf</i></u></li>
         <li>There are 10 syllables in a line and they follow a regular pattern: an unstressed syllable followed by a stressed one. This line is called a(an) <u>iambic pentameter</u> line. </li>
         <li>Spenser’s masterpiece <u><i>The Faerie Queen</i></u> is an extended hymn dedicated to the Queen Elizabeth.</li>
-        <li><u>Sonnet</u> (literary form) is popular in Elizabethan age.</li>
         <li>"Renaissance" means rebirth or revival of letters. It encourages a rebirth of <u>human spirit</u>. (Humanism)</li>
     </ul>
 
+    <h2>Quiz for Week3</h2>
 </body>
 
 </html>
