--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Justype</h1>
+    <h2>闲话</h2>
+    <p>我还是应该把更多的精力放到学习知识上，而非制作知识的思维导图上，这些只是大纲。大纲还是要搞的，但是这些只是检验你所学的知识的，<em>学习更多的知识</em>才是自己要做的事情。</p>
     <h2>大学生活</h2>
     <h3>大三上</h3>
     <h4>学习课程</h4>
