--- a/3-1/9-GBL.html
+++ b/3-1/9-GBL.html
@@ -30,6 +30,23 @@
         <li>Spenser’s masterpiece <u><i>The Faerie Queen</i></u> is an extended hymn dedicated to the Queen Elizabeth.</li>
         <li>"Renaissance" means rebirth or revival of letters. It encourages a rebirth of <u>human spirit</u>. (Humanism)</li>
     </ul>
+    <hr>
+
+    <h2>Quiz for Week2 (My answer)</h2>
+    <h3>What might an Elizabethan audience think of Shylock?</h3>
+    <p>He is a greedy and cold blooded man.</p>
+    <ul> 
+        <li>Sherlock refused to repay and insisted on cutting a pound of meat from the chest of businessman Antonio. Because Antonio did not charge interest when lending money to people. And this action affected Sherlock’s usury business. Therefore, he wanted Antonio to die so that an gather more wealth.</li>
+        <li>Because Sherlock tried to stop her daughter Jessica and Rolando from falling in love, Jessica and Rolando ran away. After learning that, he cursed his biological daughter because she took money from him.</li>
+    </ul>
+    <h3>What do you think of Shylock?</h3>
+    <p>He is the epitome of ethnic and religious conflicts.</p>
+    <ul>
+        <li>At that time, the Jews would be severely oppressed. Due to the decree, they must conceal their identity and religious beliefs. Meanwhile, jews was not easy to keep wealth from government. So he had no choice but to live on usury. </li>
+        <li>Their different religious beliefs made big differences in thinking. Sherlock lived a temperate life. And he scorned Christian luxury. This is not just a conflict between individuals, but also between race and religion.</li>
+        <li>As Shylock said in Act 3, Scene 1, he had senses, affections and passions. He is a complete man. Because of the oppression of others, he can only choose to revenge. So his jealousy is his revenge. This is a helpless move.</li>
+    </ul>
+    <hr>
 
     <h2>Quiz for Week3</h2>
 </body>
