Quiz in 3,4 class

--- a/3-1/9-GBL.html
+++ b/3-1/9-GBL.html
@@ -48,6 +48,19 @@
     </ul>
     <hr>
 
+    <h2>Quiz in Week3,4 Class</h2>
+    <ul>
+        <li>Milton's most representative work is <u><i>Paradise Lost</i></u></li>
+        <li>The story of <i>Paradise Lost</i> is taken out of <u><i>Genesis of Old Testament</i></u>.</li>
+        <li>The major story of <i>Paradise Lost</i> is about <u>the fall of man</u>.</li>
+        <li>The most important representative poet of neoclassicism is <u>Alexander Pope</u>.</li>
+        <li><i>Gulliver's Travels</i> is written by <u>Jonathan Swift</u>.</li>
+        <li><u><i>Pamela</i></u> is a novel written in letter forms.</li>
+        <li><u>Henry Fielding</u> is the first writer who used third-person narration.</li>
+        <li><u>Novel</u> is a literary genre that appeared in the 18th century.</li>
+    </ul>
+    <hr>
+
     <h2>Quiz for Week3</h2>
 </body>
 
