--- a/3-1/9-GBL.html
+++ b/3-1/9-GBL.html
@@ -15,20 +15,20 @@
     <!-- 第一章 第一次 -->
     <h2>Quiz for Week1</h2>
     <ul>
-        <li>Sonnet 75 starting with the line “One day I wrote her name upon the strand” was written by <u>Edmund Spenser</u>.</li>
-        <li><i>Shakespeare's Sonnets</i> is the title of a collection of <u>154</u> sonnets by William Shakespeare.</li>
-        <li><u>Sonnet</u> (literary form) is popular in Elizabethan age.</li>
-        <li><u>Sir Philip Sidney</u> is an Elizabethan poet who stood for the Renaissance ideal of “the complete man.”</li>
-        <li>The basic unit of poetic meter in English is a <u>foot</u> which normally consists of one stressed syllable plus one or two unstressed syllables. </li>
-        <li>A four-line stanza is called a <u>quatrain</u>. </li>
-        <li><u>Chaucer</u> is often regarded as the father of English Literature.</li>
-        <li>Novel appeared in the <u>Neoclassic</u> period. <em>???</em></li>
-        <li>Referential language refers to the language that <u>is limited to everyday real life and situational use</u>.</li>
-        <li>Representational language refers to the language that <u>engages one’s emotion and imagination</u>.</li>
-        <li>The most important literary work of the Old-English period is <u><i>Beowulf</i></u></li>
-        <li>There are 10 syllables in a line and they follow a regular pattern: an unstressed syllable followed by a stressed one. This line is called a(an) <u>iambic pentameter</u> line. </li>
-        <li>Spenser’s masterpiece <u><i>The Faerie Queen</i></u> is an extended hymn dedicated to the Queen Elizabeth.</li>
-        <li>"Renaissance" means rebirth or revival of letters. It encourages a rebirth of <u>human spirit</u>. (Humanism)</li>
+        <li>Sonnet 75 starting with the line “One day I wrote her name upon the strand” was written by <ins>Edmund Spenser</ins>.</li>
+        <li><i>Shakespeare's Sonnets</i> is the title of a collection of <ins>154</ins> sonnets by William Shakespeare.</li>
+        <li><ins>Sonnet</ins> (literary form) is popular in Elizabethan age.</li>
+        <li><ins>Sir Philip Sidney</ins> is an Elizabethan poet who stood for the Renaissance ideal of “the complete man.”</li>
+        <li>The basic unit of poetic meter in English is a <ins>foot</ins> which normally consists of one stressed syllable plus one or two unstressed syllables. </li>
+        <li>A four-line stanza is called a <ins>quatrain</ins>. </li>
+        <li><ins>Chaucer</ins> is often regarded as the father of English Literature.</li>
+        <li>Novel appeared in the <ins>Neoclassic</ins> period. <em>???</em></li>
+        <li>Referential language refers to the language that <ins>is limited to everyday real life and situational use</ins>.</li>
+        <li>Representational language refers to the language that <ins>engages one’s emotion and imagination</ins>.</li>
+        <li>The most important literary work of the Old-English period is <ins><i>Beowulf</i></ins></li>
+        <li>There are 10 syllables in a line and they follow a regular pattern: an unstressed syllable followed by a stressed one. This line is called a(an) <ins>iambic pentameter</ins> line. </li>
+        <li>Spenser’s masterpiece <ins><i>The Faerie Queen</i></ins> is an extended hymn dedicated to the Queen Elizabeth.</li>
+        <li>"Renaissance" means rebirth or revival of letters. It encourages a rebirth of <ins>human spirit</ins>. (Humanism)</li>
     </ul>
     <hr>
 
@@ -50,18 +50,48 @@
 
     <h2>Quiz in Week3,4 Class</h2>
     <ul>
-        <li>Milton's most representative work is <u><i>Paradise Lost</i></u></li>
-        <li>The story of <i>Paradise Lost</i> is taken out of <u><i>Genesis of Old Testament</i></u>.</li>
-        <li>The major story of <i>Paradise Lost</i> is about <u>the fall of man</u>.</li>
-        <li>The most important representative poet of neoclassicism is <u>Alexander Pope</u>.</li>
-        <li><i>Gulliver's Travels</i> is written by <u>Jonathan Swift</u>.</li>
-        <li><u><i>Pamela</i></u> is a novel written in letter forms.</li>
-        <li><u>Henry Fielding</u> is the first writer who used third-person narration.</li>
-        <li><u>Novel</u> is a literary genre that appeared in the 18th century.</li>
+        <li>Milton's most representative work is <ins><i>Paradise Lost</i></ins></li>
+        <li>The story of <i>Paradise Lost</i> is taken out of <ins><i>Genesis of Old Testament</i></ins>.</li>
+        <li>The major story of <i>Paradise Lost</i> is about <ins>the fall of man</ins>.</li>
+        <li>The most important representative poet of neoclassicism is <ins>Alexander Pope</ins>.</li>
+        <li><i>Gulliver's Travels</i> is written by <ins>Jonathan Swift</ins>.</li>
+        <li><ins><i>Pamela</i></ins> is a novel written in letter forms.</li>
+        <li><ins>Henry Fielding</ins> is the first writer who used third-person narration.</li>
+        <li><ins>Novel</ins> is a literary genre that appeared in the 18th century.</li>
     </ul>
     <hr>
 
     <h2>Quiz for Week3</h2>
+    <h3>Neoclassical Age</h3>
+    <ul>
+        <li>Neoclassicists thought that all forms of literature should model on <ins>the classical literature of the ancient Greek and Roman writers</ins>.</li>
+        <li>The new literary genre which appeared in the Neoclassical Age(1660-1798) is <ins>novel</ins>.</li>
+        <li>Which of the following is not a sentimental novel?
+            <ul>
+                <li>Tristram Shandy</li>
+                <li>A Sentimental Journey</li>
+                <li>The Vicar of Wakefield</li>
+                <li><del>Robinson Crusoe</del></li>
+            </ul>
+        </li>
+    </ul>
+    <h3>Milton and <i>Paradise Lost</i></h3>
+    <ul>
+        <li>Milton served as <ins>the Latin Secretary</ins> for the Cromwell government.</li>
+        <li>In <i>Paradise Lost</i>, Raphael warned Adam <ins>not to eat the fruit on the tree of knowledge</ins>.</li>
+        <li>Milton said that his writing purpose of <i>Paradise Lost</i> was <ins>to justify God’s punishment on human beings</ins>.</li>
+        <li>Satan was originally <ins>a angel</ins>.</li>
+        <li>After Satan was defeated, he <ins>fell down to the blazing fires of hell</ins>.</li>
+        <li>When Satan woke up after the defeat, he immediately <ins>expressed his determination that he would never change or beg for forgiveness</ins>.</li>
+        <li>Satan told his followers that <ins>doing ill is their only delight</ins>.</li>
+    </ul>
+    <h3>Alexander Pope</h3>
+    <ul>
+        <li>“A little learning is a dangerous thing” is quoted from <ins>Alexander Pope</ins>.</li>
+        <li>In An Essay on Criticism, Alexander Pope suggested that <ins>writers should show the real beauty of nature</ins>.</li>
+        <li><ins><i>The Dunciad</i></ins> is a fanciful and ingenious mock-heroic work or a mock epic.</li>
+    </ul>
+
 </body>
 
 </html>
