--- a/3-1/9-GBL.html
+++ b/3-1/9-GBL.html
@@ -94,7 +94,11 @@
 
     <h2>Class in Week5</h2>
     <ul>
-        <li>intro</li>
+        <li>intro
+            <ul>
+                <li>Wordsworth and Coleridge published a volume of poems entitled <ins><i>Lyrical Ballads</i></ins> which is generally considered to have marked the beginning of the English Romantic movement in literature.</li>
+            </ul>
+        </li>
     </ul>
 </body>
 
