--- a/index.html
+++ b/index.html
@@ -1,27 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Justype</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Transport</title>
 </head>
 <body>
-    <h1>Justype</h1>
-    <h2>闲话</h2>
-    <p>我还是应该把更多的精力放到学习知识上，而非制作知识的思维导图上，这些只是大纲。大纲还是要搞的，但是这些只是检验你所学的知识的，<em>学习更多的知识</em>才是自己要做的事情。</p>
-    <h2>大学生活</h2>
-    <h3>大三上</h3>
-    <h4>学习课程</h4>
-    <ol>
-        <li>动物分子生物学</li>
-        <li>细胞生物学</li>
-        <li>兽医病理生理学</li>
-        <li>兽医微生物学</li>
-        <li>兽医药理学</li>
-        <li>畜牧学概论A</li>
-        <li>动物局部解剖学</li>
-        <li>兽医临床诊断学</li>
-        <li><a href="./3-1/9-GBL.html">英国文学</a></li>
-    </ol>
+    <a href="http://www.fao.org/3/Y4628E/y4628e03.htm">Egg Production</a>
+    <a href="aim.html">My page</a>
 </body>
 </html>
