--- a/3-1/9-GBL.html
+++ b/3-1/9-GBL.html
@@ -100,6 +100,23 @@
             </ul>
         </li>
     </ul>
+    <hr>
+
+    <h2>Class in Week6</h2>
+    <ul>
+        <li>Which of the following is <strong>NOT</strong> true of Byron?
+            <ul>
+                <li>He was very handsome, but born lame.</li>
+                <li>He was actually a very good sportsman, yet he was affected by his clubfoot which often made him feel sore and angry.</li>
+                <li><del>Because of the English prejudice, his name was denied and excluded from those of famous poets in the "Poets' Corner" in Westminster Abbey. </del></li>
+                <li>He was once regarded as a satanic poet in England but as the poet of the people on the Continent.</li>
+            </ul>
+        </li>
+        <li><i>Don Juan</i> is a long satirical poem based on a traditional Spanish legend in which Don Juan is a  <ins>frivolous womanizer</ins>.</li>
+        <li>In 1816, Shelley met <ins>Lord Byron</ins> in Switzerland, and they became close friends. </li>
+        <li>In “Ode to the West Wind”, Shelley sees the west wind as <ins>a symbol of revolutionary force</ins>.</li>
+        
+    </ul>
 </body>
 
 </html>
