--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title>Transport</title>
 </head>
 <body>
-    <a href="http://www.fao.org/3/Y4628E/y4628e03.htm">Egg Production</a>
-    <a href="aim.html">My page</a>
+    <h1>Transport</h1>
+    <h2>Personal Use</h2>
+    <ul>
+        <li><a href="http://www.fao.org/3/Y4628E/y4628e03.htm">Egg Production</a></li>
+    </ul>
+    <h2>My Project</h2>
+    <ul>
+        <li>None</li>
+    </ul>
+    <h2>Daily</h2>
+    <ul>
+        <li><a href="aim.html">My page</a></li>
+    </ul>
 </body>
 </html>
