--- a/3-1/9-GBL.html
+++ b/3-1/9-GBL.html
@@ -93,17 +93,100 @@
     </ul>
 
     <h2>Class in Week5</h2>
-    <ul>
-        <li>intro
+    <ol>
+        <li>Wordsworth and Coleridge published a volume of poems entitled <ins><i>Lyrical Ballads</i></ins> which is generally considered to have marked the beginning of the English Romantic movement in literature.</li>
+        <li>Which of the following is <strong>NOT</strong> a poetic collection written by William Blake?
             <ul>
-                <li>Wordsworth and Coleridge published a volume of poems entitled <ins><i>Lyrical Ballads</i></ins> which is generally considered to have marked the beginning of the English Romantic movement in literature.</li>
+                <li><del><i>Lyrical Ballads</i></del></li>
+                <li><i>Songs of Innocence</i></li>
+                <li><i>Songs of Experience</i></li>
+                <li><i>Poetical Sketches</i></li>
             </ul>
         </li>
+        <li>The main themes of Songs of Experience are <ins>misery and poverty</ins>.</li>
+        <li>Robert Burns is the best known for writing in the <ins>Scots</ins> language and is widely accepted as a cultural icon inScotland.</li>
+        <li>Which of the following is <strong>NOT</strong> a poet of The Lake Poets?
+            <ul>
+                <li>William Wordsworth</li>
+                <li>Samuel Taylor Coleridge</li>
+                <li><del>Percy Bysshe Shelley</del></li>
+                <li>Robert Southey</li>
+            </ul>
+        </li>
+        <li>Wordsworth uses <ins>hyperbole</ins> to express the vastness of the vision, an eternal vastness in the line of “They stretched in never-ending line.” in the poem “I wondered Lonely as a cloud”.</li>
+        <li>The <ins>“Lucy poems”</ins> describe the rare elusive beauty of a young country girl living a simple life in a remote village far from the civilized world.</li>
+        <li>Which of the following poem is <strong>NOT</strong> written by Coleridge?
+            <ul>
+                <li>“Kubla Khan”</li>
+                <li>“The Rime of the Ancient Mariner”</li>
+                <li>“Christabel”</li>
+                <li><del>“Ode to a Nightingale”</del></li>
+            </ul>
+        </li>
+        <li>Which of the following poem is <strong>NOT</strong> viewed as a demonic poem of Coleridge?
+            <ul>
+                <li>“Kubla Khan”</li>
+                <li>“The Rime of the Ancient Mariner”</li>
+                <li>“Christabel”</li>
+                <li><del>“Frost at Midnight”</del></li>
+            </ul>
+        </li>
+    </ol>
+    <hr>
+
+    <h2>Quiz for Week5</h2>
+    <h3>Romanticism</h3>
+    <ul>
+        <li>Which of the following is <strong>NOT</strong> a feature of English Romanticism?
+            <li>Emotion</li>
+            <li>Nature</li>
+            <li>Passion</li>
+            <li><del>Reason</del></li>
+        </li>
+    </ul>
+    <h3>William Blake</h3>
+    <ul>
+        <li><i>Songs of Innocence</i>, published in 1809, is a lovely volume of poems. The poems praise <ins>the beauty of nature and the innocence of the child</ins>.</li>
+        <li> In the poem “Songs of Innocence”, “lamb” is the symbol of <ins>innocence</ins> in Christianity.</li>
+        <li><i>Songs of Experience</i> paints this world of misery, poverty, disease, war and repression with a <ins>melancholy</ins> tone.</li>
+        <li>In the line of the poem “The Chimney Sweeper”, “a heaven of our misery” is a figure of speech called <ins>oxymoron</ins>. “Heaven” and “misery”, two words of opposite meaning, are put together to create strong ironic effect.</li>
+    </ul>
+    <h3>Robert Burns</h3>
+    <ul>
+        <li>“A Red, Red Rose” is one of Burns most popular songs of <ins>love</ins> in Scottish dialect.</li>
+        <li>Robert Burns is most famous for his songs, in which he uses simple and <ins>musical</ins> language to celebrate love, friendship, patriotism and other beautiful human feelings and emotions.</li>
+    </ul>
+    <h3>William Wordsworth</h3>
+    <ul>
+        <li>Which of the following is <strong>NOT</strong> a feature of the poetry of Wordsworth?
+            <ul>
+                <li>Nature inspires poetry.</li>
+                <li>Common subjects can be poetic.</li>
+                <li>Musical poetry is spontaneous.</li>
+                <li><del>Poems should describe supernatural realm.</del></li>
+            </ul>
+        </li>
+        <li>What are the 2 subjects of Wordsworth’s poetry? <ins>Nature and common life.</ins></li>
+        <li>The “never-ending line” of flowers is compared to <ins>twinkling stars</ins> in “I Wondered Lonely as a Cloud”.</li>
+        <li>Which of the following expression is <strong>NOT</strong> a suitable description for the solitude and mysteriousness of Lucy in the “Lucy Poems”?
+            <ul>
+                <li>“None to praise.”</li>
+                <li>“Very few to love.”</li>
+                <li>“Untrodden ways.”</li>
+                <li>“Fair as a star.”</li>
+            </ul>
+        </li>
+    </ul>
+    <h3>Samuel Taylor Coleridge</h3>
+    <ul>
+        <li>Coleridge can be regarded as the first <ins>critic</ins> of the romantic age because of his work <i>Biographia Literia</i>.</li>
+        <li><ins>“Kubla Khan”</ins> is a dream-poem.</li>
+        <li> A recurring motif throughout Coleridge’s poetry is the power of dreams and of the <ins>imagination</ins>.</li>
     </ul>
     <hr>
 
     <h2>Class in Week6</h2>
-    <ul>
+    <ol>
         <li>Which of the following is <strong>NOT</strong> true of Byron?
             <ul>
                 <li>He was very handsome, but born lame.</li>
@@ -115,8 +198,16 @@
         <li><i>Don Juan</i> is a long satirical poem based on a traditional Spanish legend in which Don Juan is a  <ins>frivolous womanizer</ins>.</li>
         <li>In 1816, Shelley met <ins>Lord Byron</ins> in Switzerland, and they became close friends. </li>
         <li>In “Ode to the West Wind”, Shelley sees the west wind as <ins>a symbol of revolutionary force</ins>.</li>
-        
-    </ul>
+        <li>Keats died in <ins>Rome</ins>.</li>
+        <li>According to Keats, it seems that the myth of the hyacinth flower has something to do with all the following EXCEPT ______.
+            <ul>
+                <li><del>nymphs</del></li>
+                <li>Apollo</li>
+                <li>Hades</li>
+                <li>Zephyrus</li>
+            </ul>
+        </li>
+    </ol>
 </body>
 
 </html>
