--- a/3-1/9-GBL.html
+++ b/3-1/9-GBL.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Guide of British Literature</h1>
-    <p>MOOC答案，用于最后的MOOC期末考试用</p>
+    <p>做的MOOC答案，用于最后线上的MOOC期末考试用</p>
     <!-- 第一章 第一次 -->
     <h2>Quiz for Week1</h2>
     <ul>
@@ -138,10 +138,12 @@
     <h3>Romanticism</h3>
     <ul>
         <li>Which of the following is <strong>NOT</strong> a feature of English Romanticism?
-            <li>Emotion</li>
-            <li>Nature</li>
-            <li>Passion</li>
-            <li><del>Reason</del></li>
+            <ul>
+                <li>Emotion</li>
+                <li>Nature</li>
+                <li>Passion</li>
+                <li><del>Reason</del></li>
+            </ul>
         </li>
     </ul>
     <h3>William Blake</h3>
@@ -208,6 +210,55 @@
             </ul>
         </li>
     </ol>
+    <hr>
+
+    <h2>Quiz for Week6</h2>
+    <ul>
+        <li>All the following are main figures of the second generation of Romantic poets EXCEPT ______.
+            <ul>
+                <li>Byron</li>
+                <li>Keats</li>
+                <li>Shelley</li>
+                <li><del>Pope</del></li>
+            </ul>
+        </li>
+        <li>The first three cantos of “Ode to the West Wind” describe the wind's powerful influence upon all the following EXCEPT ______.
+            <ul>
+                <li><del>the art</del></li>
+                <li>the air</li>
+                <li>the ocean</li>
+                <li>the earth</li>
+            </ul>
+        </li>
+        <li>In “Ode to the West Wind”, west wind is presented as <ins>both destroyer and preserver</ins>.</li>
+        <li>Which of the following is <strong>NOT</strong> true?
+            <ul>
+                <li>Shelley held a life-long aversion to cruelty, injustice, authority, institutional religion, and the oppressive and hypocritical society.</li>
+                <li>Shelley never uses any political term and revolution slogan in “Ode to the West Wind”. </li>
+                <li>Byron's chief contribution is to introduce into English poetry a new style of character, “Byronic Hero”.</li>
+                <li><del>Byron was once regarded as a satanic poet on the Continent but as the poet of the people in England.</del></li>
+            </ul>
+        </li>
+        <li>Through the line “If Winter comes, can Spring be far behind?” Shelly shows <ins>his passion and optimism</ins>.</li>
+        <li>Keats produced all the following famous odes EXCEPT ______.
+            <ul>
+                <li>"Ode on a Grecian Urn"</li>
+                <li>“Ode on Melancholy”</li>
+                <li>“Ode to a Nightingale”</li>
+                <li>“Ode to the West Wind”</li>
+            </ul>
+        </li>
+        <li>“Beauty is truth, truth beauty” is the most famous words of the poem <ins>“Ode on a Grecian Urn”</ins>.</li>
+        <li>All the following poems belong to the same poem collection EXCEPT ______.
+            <ul>
+                <li><i>The Eve of St. Agnes</i></li>
+                <li><del><i>Alastor</i></del></li>
+                <li><i>Lamia</i></li>
+                <li><i>Isabella</i></li>
+            </ul>
+        </li>
+        <li>As to rhyme scheme, the pattern terza rima is followed in <ins>"Ode to the West Wind"</ins>.</li>
+    </ul>
 </body>
 
 </html>
