--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <h2>Personal Use</h2>
     <ul>
         <li><a href="http://www.fao.org/3/Y4628E/y4628e03.htm">Egg Production</a></li>
+        <li><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4921131/">Inflammatory Cardiomyopathy 心肌炎</a></li>
+        <li>找书
+            <ul>
+                <li><a href="salttiger.com/">编程书籍</a></li>
+            </ul>
+        </li>
     </ul>
     <h2>My Project</h2>
     <ul>
